Version 6.3.1
- Added getcrc() builtin for Spin2
- Fixed compilation error for object arrays in bytecode
- Fixed some quirks in the space/tab warning code

Version 6.3.0
- Added #pragma exportdef to make defines apply in other files. This
  provides another way for top level objects to control sub-objects' behavior.
- Added freopen(), tmpfile(), mktemp(), and some other stdio functions
- Added some missing math functions
- Cleaned up PSRAM access methods and made them more consistent
- Correctly handled casts to void in nucode output
- Fixed some problems with sizeof() used to declare local variables
- Fixed incorrect multiple casting of union initialization
- Fixed incorrect evaluation of unsigned constant expressions
- Fixed an over-eager register rename in the optimizer
- Fixed a bug which caused incorrect type inference for method variables in P1 ROM bytecode
- Several improvements to C locale() related functions

Version 6.2.3
- Added strpbrk(), strcoll(), strspn() functions for the C library
- Fixed a potential crash in Spin2 parsing of @func()
- Fixed taking the difference of a pointer and generic value

Version 6.2.2
- Fixed some 64 bit constant issues with DIR/OUT/IN manipulation
- Make sure garbage collector does not reclaim BASIC I/O wrapper
- Reverted waitatn() change from 6.2.0

Version 6.2.1
- Added a check for i <= 0 in mid$(a, i, j)
- Fixed a bug in calculating fcache size
- Fixed @x-@y expressions in P1 bytecode DAT section
- Fixed some array offset calculations in P1 bytecode (thanks Ada)
- Fixed object arrays in P1 bytecode (thanks again to Ada)
- Fixed returning classes from functions, at least for some common cases

Version 6.2.0
- Changed waitatn() to use a pollatn() loop like the Spin2 interpreter does
- Extended littlefs code to allow multiple instances
- Fixed offset computation when structs have 8 byte subfields
- Fixed a bug in alignment of 64 bit integers